<resources>
    <string name="app_name">Fuel Planner</string>
    <string name="action_settings">Settings</string>
    <string name="milHint">Enter distance travelled (MILES)</string>
    <string name="costHint">Enter cost (£)</string>
    <string name="amHint">Enter amount (LITRES)</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Values not saved because a field was empty.</string>
    <string name="not_found">Entry was not found. Entry may have been deleted.</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="fuel_label">Fuel used \n Gallons/Litres</string>
    <string name="distance_label">Distance travelled \n Miles/Kilometres</string>
    <string name="cost_distance_label">Cost per \n Mile/Kilometre</string>
    <string name="cost_fuel_label">Cost per \n Gallon/Litre</string>
    <string name="mpg_label">Miles per \n Gallon/Litre</string>
    <string name="kpg_label">Kilometres per \n Gallon/Litre</string>
    <string name="car_stats">Car Statistics</string>
    <string name="instructions">Enter a car ID to retrieve statistics for that model </string>
    <string name="button_text">Search Cars</string>
    <string name="input_hint">Car ID</string>
    <string name="no_results">No Results Found</string>
    <string name="loading">Loading...</string>
    <string name="api_button">Get Data</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="avMpg">Average Miles Per Gallon</string>
    <string name="urbanMpg">Urban Miles Per Gallon</string>
    <string name="extraUrbanMpg">Extra Urban Miles Per Gallon</string>
    <string name="kpl">Kilometres Per Litre</string>

</resources>
