<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_mileage"
        style="@style/text_view_style"
        android:hint="@string/milHint"
        android:inputType="none|number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_cost"
        style="@style/text_view_style"
        android:hint="@string/costHint"
        android:inputType="none|number|textAutoComplete" />

    <EditText
        android:id="@+id/edit_amount"
        style="@style/text_view_style"
        android:hint="@string/amHint"
        android:inputType="none|number|textAutoComplete" />

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:text="@string/button_save" />
</LinearLayout>